# app/Http/Controllers/Apis/ProfileController.php
@@ -125,7 +125,35 @@ class ProfileController extends Controller
      */
     public function update(Request $request, $id)
     {
-        //
+        if ($request->user()->id != $id) return response()->json(['message' => 'FORBIDDEN'], 403);
+        $this->validate($request, [
+            'first_name' => 'required',
+            'last_name' => 'required',
+            'email' => 'required',
+            'email' => 'required|email|unique:users,email,'.$id,
+            'password' => 'same:confirm-password',
+            'roles' => 'required'
+        ]);
+
+        
+        $input = $request->all();
+        if(!empty($input['password'])){ 
+            $input['password'] = Hash::make($input['password']);
+        }else{
+            $input = array_except($input,array('password'));    
+        }
+
+
+        $user = User::find($id);
+        $user->update($input);
+        DB::table('model_has_roles')->where('model_id',$id)->delete();
+
+
+        $user->assignRole($request->input('roles'));
+
+
+        return redirect()->route('users.index')
+                        ->with('success','User updated successfully');
     }
 
     /**
