# public/swagger/swagger.json
@@ -15,7 +15,7 @@
         "http"
     ],
     "paths": {
-        "/api/posts": {
+        "api/posts": {
             "get": {
                 "tags": [
                     "Posts"
@@ -92,7 +92,7 @@
                 }
             }
         },
-        "/api/posts/{id}": {
+        "api/posts/{id}": {
             "get": {
                 "tags": [
                     "Posts"
@@ -214,6 +214,206 @@
                     },
                     "401": {
                         "description": "Unauthenticated"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": [
+                    "Update Post"
+                ],
+                "description": "Return post detail by Id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Length of record need to response",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "title",
+                        "in": "formData",
+                        "description": "Title Post",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "content",
+                        "in": "formData",
+                        "description": "Content Post",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "photo_thumbnail",
+                        "in": "formData",
+                        "description": "Photo thumbnail Post",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "full_photo",
+                        "in": "formData",
+                        "description": "Full photo Post",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "due_day",
+                        "in": "formData",
+                        "description": "Due day Post",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "id": {
+                                    "type": "number",
+                                    "example": 1
+                                },
+                                "user_id": {
+                                    "type": "number",
+                                    "example": 1
+                                },
+                                "title": {
+                                    "type": "string",
+                                    "example": "First Project"
+                                },
+                                "content": {
+                                    "type": "string",
+                                    "example": "Hello World"
+                                },
+                                "photo_thumbnail": {
+                                    "type": "string",
+                                    "example": "..."
+                                },
+                                "full_photo": {
+                                    "type": "string",
+                                    "example": "..."
+                                },
+                                "due_day": {
+                                    "type": "string",
+                                    "example": "2000-12-03 12:20:20"
+                                },
+                                "status": {
+                                    "type": "number",
+                                    "example": 0
+                                },
+                                "user": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "number",
+                                            "example": 1
+                                        },
+                                        "first_name": {
+                                            "type": "string",
+                                            "example": "admin"
+                                        },
+                                        "last_name": {
+                                            "type": "string",
+                                            "example": "admin"
+                                        },
+                                        "username": {
+                                            "type": "string",
+                                            "example": "admin"
+                                        },
+                                        "email": {
+                                            "type": "string",
+                                            "example": "admin@gmail.com"
+                                        },
+                                        "address": {
+                                            "type": "string",
+                                            "example": "Danang, Vietnam"
+                                        },
+                                        "code_id": {
+                                            "type": "string",
+                                            "example": "admincode"
+                                        },
+                                        "personal_photo": {
+                                            "type": "string",
+                                            "example": "..."
+                                        },
+                                        "gender": {
+                                            "type": "number",
+                                            "example": 0
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "example": "2000-12-03 12:20:20"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "example": "2000-12-03 12:20:20"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "created_at": {
+                                    "type": "string"
+                                },
+                                "updated_at": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    },
+                    "404": {
+                        "description": "NotFound Data"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": [
+                    "Delete Post"
+                ],
+                "description": "Delete post by Id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Length of record need to response",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "message": {
+                                    "type": "string",
+                                    "example": "success"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found Data"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "FORBIDDEN"
                     }
                 }
             }
